--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -102,10 +102,13 @@ spring:
 security:
     oauth2:
         client:
-            client-id: internal
-            client-secret: internal
+            access-token-uri: http://34.74.192.113:8888/auth/realms/graeshoppe/protocol/openid-connect/token
+            user-authorization-uri: http://34.74.192.113:8888/auth/realms/graeshoppe/protocol/openid-connect/auth
+            client-id: account
+            client-secret: 8a4c3fda-44ec-485a-9d59-d6d7fdcb1895
+            scope: openid profile email
         resource:
-            user-info-uri: http://localhost:9080/auth/realms/jhipster/protocol/openid-connect/userinfo
+             user-info-uri: http://34.74.192.113:8888/auth/realms/graeshoppe/protocol/openid-connect/userinfo
 
 server:
     servlet:
