commented store save

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -102,8 +102,8 @@ spring:
 security:
     oauth2:
         client:
-            access-token-uri: http://34.74.192.113:8888/auth/realms/graeshoppe/protocol/openid-connect/token
-            user-authorization-uri: http://34.74.192.113:8888/auth/realms/graeshoppe/protocol/openid-connect/auth
+            access-token-uri: http://dev.servers.divisosofttech.com:8888/auth/realms/graeshoppe/protocol/openid-connect/token
+            user-authorization-uri: http://dev.servers.divisosofttech.com:8888/auth/realms/graeshoppe/protocol/openid-connect/auth
             client-id: account
             client-secret: 8a4c3fda-44ec-485a-9d59-d6d7fdcb1895
             scope: openid profile email
